# dataset-tools

./: Cargo.toml  LICENSE.txt  README.md  build.ps1  build.rs  foundation_sc.py  stats.py
.cargo/: config.toml
assets/1_caption_with_extra_extension/: input.png.txt
benches/: main_bench.rs
check/: Cargo.toml
check-for-attributes/: Cargo.toml
check-for-attributes/src/: main.rs
check-for-cringe-summaries/: Cargo.toml
check-for-cringe-summaries/src/: main.rs
check-for-multiline/: Cargo.toml
check-for-multiline/src/: main.rs
check-for-optimizations/: Cargo.toml
check-for-optimizations/src/: main.rs
check-for-pedantic/: Cargo.toml
check-for-pedantic/src/: main.rs
check-for-unwrap/: Cargo.toml
check-for-unwrap/src/: main.rs
check/src/: main.rs
comic-splitter/: Cargo.toml
comic-splitter/src/: main.rs
compress-exe/: Cargo.toml
compress-exe/src/: main.rs
convert-caption-json-to-txt/: Cargo.toml
convert-caption-json-to-txt/src/: main.rs
convert-e621-json-to-caption/: Cargo.toml
convert-e621-json-to-caption/src/: main.rs
create-empty-caption-files/: Cargo.toml
create-empty-caption-files/src/: main.rs
delete-url-files/: Cargo.toml
delete-url-files/src/: main.rs
examples/: aho_corasick_basic.rs  aho_corasick_case_insensitive.rs  aho_corasick_leftmost.rs  aho_corasick_standard.rs  aho_corasick_stream_replace.rs  binary_search.rs  bytemucking.rs  kmeans_colors.rs  logging_example.rs  monomorphism.rs  nanorand_initialized_rng.rs  nanorand_thread-local_rng.rs  resource_manager.rs  slerp.rs  slerp_clamped.rs  slerp_eased_out_cubic.rs  slerp_plot.rs
examples/candle-einops/: basic.rs
examples/github/: get_repos.rs  gist.rs  redis_user_repos_hash.rs  single_repo_stats.rs
examples/redis/: dump.rs  get_github_repos.rs  insert_awoo.rs
extract-metadata/: Cargo.toml
extract-metadata/src/: main.rs
fix-multiline-tags/: Cargo.toml
fix-multiline-tags/src/: main.rs
format-json/: Cargo.toml
format-json/src/: main.rs
g/: Cargo.toml
g/src/: lib.rs  main.rs
hotdogaug/: .gitignore  Cargo.toml
hotdogaug/src/: main.rs
insert-pedantic/: Cargo.toml
insert-pedantic/src/: main.rs
keep-tokens/: Cargo.toml
keep-tokens/src/: main.rs
letterbox-remover/: Cargo.toml
letterbox-remover/src/: main.rs
list-lora-blocks/: Cargo.toml
list-lora-blocks/src/: main.rs
lua/: README.md  table-indexing.lua
misc/python/: .gitignore  Depth Estimation.ipynb  beir.ipynb  bm25s.ipynb  bucket_test.py
qwen/: Cargo.toml
qwen/src/: main.rs
remove-escape-characters/: Cargo.toml
remove-escape-characters/src/: main.rs
remove-extra-file-extensions/: Cargo.toml
remove-extra-file-extensions/src/: main.rs
remove-lora-blocks/: Cargo.toml
remove-lora-blocks/src/: main.rs
remove-mac-artifacts/: Cargo.toml
remove-mac-artifacts/src/: main.rs
remove-transparency/: Cargo.toml
remove-transparency/src/: main.rs
remove-url-files/: Cargo.toml
rename-to-md5/: Cargo.toml
rename-to-md5/src/: main.rs
replace-special-characters/: Cargo.toml
replace-special-characters/src/: main.rs
rplc/: Cargo.toml
rplc/src/: main.rs
sample-browser/: Cargo.toml
sample-browser/src/: main.rs
search-for-empty-captions/: Cargo.toml
search-for-empty-captions/src/: main.rs
search-for-superscript-numbers/: Cargo.toml
search-for-superscript-numbers/src/: main.rs
simpletuner2kohya/: Cargo.toml
simpletuner2kohya/src/: main.rs
src/: Cargo.toml  lib.rs  main.rs
src/check-for-attributes/: main.rs
src/convert-e621-json-to-caption/: main.rs
src/format-json/: main.rs
