[workspace]
resolver = "2"
members = [
  "check-for-attributes",
  "check-for-cringe-summaries",
  "check-for-multiline",
  "check-for-optimizations",
  "check-for-pedantic",
  "check-for-unwrap",
  "compress-exe",
  "convert-caption-json-to-txt",
  "convert-e621-json-to-caption",
  "create-empty-caption-files",
  "delete-url-files",
  "extract-metadata",
  "format-json",
  "g",
  "hotdogaug",
  "insert-pedantic",
  "keep-tokens",
  "letterbox-remover",
  "remove-escape-characters",
  "remove-extra-file-extensions",
  "remove-transparency",
  "rplc",
  "search-for-empty-captions",
  "search-for-superscript-numbers",
  "qwen",
]

[package]
name = "dataset-tools"
version = "0.1.0"
authors = ["Balazs Horvath"]
edition = "2021"
license = "MIT"

# Enable all compiler optimizations in debug builds.
[profile.dev]
opt-level = 3

# Enable all compiler optimizations for dependencies in debug builds.
# With some link time optimizations, it might produce better optimized
# code, using whole-program analysis, at the cost of longer linking time.
[profile.dev.package."*"]
opt-level = 3
codegen-units = 1

# Enable every possible compiler optimizations and stripping for release builds.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
# Command Line Argument Parser for Rust
log = "0.4.22"
env_logger = "0.11.3"
clap = { version = "4.5.8", features = ["derive"] }
regex = "1.10.5"
walkdir = "2.5.0"
crossterm = "0.27.0"
serde_json = "1.0.120"
safetensors = "0.4.3"
memmap2 = "0.9.4"
anyhow = "1.0.86"
image = "0.25.1"
tokio = { version = "1.38.0", features = ["full"] }
redis = { version = "0.25.4", features = ["aio", "tokio-comp"] }
url = "2.5.2"
getopts = "0.2.21"
# 🎲
rand = { version = "0.8.5", features = ["log", "small_rng"] }
# 🐙
octocrab = { git = "https://github.com/XAMPPRocky/octocrab" }
# Candle
candle-core = { version = "0.6.0", features = ["mkl"] }
candle-transformers = { version = "0.6.0", features = ["mkl"] }
candle-nn = { version = "0.6.0", features = ["mkl"] }
# Candle Third-Party
candle-einops = { git = "https://github.com/tomsanbear/candle-einops" }
intel-mkl-src = { version = "0.8.1" }
hf-hub = { version = "0", features = ["tokio"] }
tokenizers = { version = "0", features = ["onig"] }

##################################################
### Examples

### ML

[[example]]
name = "candle_einops_basic"
path = "examples/candle-einops/basic.rs"

### Redis

[[example]]
name = "redis_insert_awoo"
path = "examples/redis/insert_awoo.rs"

[[example]]
name = "redis_dump"
path = "examples/redis/dump.rs"

[[example]]
name = "redis_get_github_repos"
path = "examples/redis/get_github_repos.rs"

### Github

[[example]]
name = "github_gist"
path = "examples/github/gist.rs"

[[example]]
name = "github_redis_user_repos_hash"
path = "examples/github/redis_user_repos_hash.rs"

[[example]]
name = "github_get_repos"
path = "examples/github/get_repos.rs"

[[example]]
name = "github_single_repo_stats"
path = "examples/github/single_repo_stats.rs"
