[workspace]
resolver = "2"
members = [
  "check",
  "check-for-cringe-summaries",
  "compress-exe",
  "convert-caption-json-to-txt",
  "convert-e621-json-to-caption",
  "create-empty-caption-files",
  "extract-metadata",
  "fix-multiline-tags",
  "format-json",
  "g",
  "insert-pedantic",
  "keep-tokens",
  "letterbox-remover",
  "list-lora-blocks",
  "remove-escape-characters",
  "remove-extra-file-extensions",
  #"remove-lora-blocks",
  "remove-mac-artifacts",
  "remove-transparency",
  "remove-url-files",
  "rename-to-md5",
  "rplc",
  "sample-browser",
  "search-for-superscript-numbers",
]

[package]
name = "dataset-tools"
version = "0.1.0"
authors = ["Balazs Horvath"]
edition = "2021"
license = "MIT"

# Enable all compiler optimizations in debug builds.
[profile.dev]
opt-level = 3

# Enable all compiler optimizations for dependencies in debug builds.
# With some link time optimizations, it might produce better optimized
# code, using whole-program analysis, at the cost of longer linking time.
[profile.dev.package."*"]
opt-level = 3
codegen-units = 1

# Enable every possible compiler optimizations and stripping for release builds.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
#criterion = { git = "https://github.com/bheisler/criterion.rs", features = ["html_reports"] }

[dependencies]
# Command Line Argument Parser for Rust
md5 = "0.7.0"
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.20", features = ["derive"] }
regex = "1.11.1"
walkdir = "2.5.0"
crossterm = "0.28.1"
serde_json = "1.0.132"
safetensors = "0.4.5"
memmap2 = "0.9.5"
anyhow = { version = "1.0.92", features = ["backtrace"] }
image = "0.25.5"
tokio = { version = "1.41.0", features = ["full"] }
redis = { version = "0.27.5", features = ["aio", "tokio-comp"] }
url = "2.5.3"
getopts = "0.2.21"
# 🎲
rand = { version = "0.8.5", features = ["log", "small_rng"] }
# 🐙
octocrab = { git = "https://github.com/XAMPPRocky/octocrab" }
# Candle
#candle-core = { version = "0.6.0", features = ["mkl"] }
#candle-transformers = { version = "0.6.0", features = ["mkl"] }
#candle-nn = { version = "0.6.0", features = ["mkl"] }
# Candle Third-Party
#candle-einops = { git = "https://github.com/tomsanbear/candle-einops" }
#intel-mkl-src = { version = "0.8.1" }
#hf-hub = { version = "0.3.2", features = ["tokio"] }
#tokenizers = { version = "0.19.1", features = ["onig"] }

##################################################
### Examples

### ML

#[[example]]
#name = "candle_einops_basic"
#path = "examples/candle-einops/basic.rs"

### Redis

[[example]]
name = "redis_insert_awoo"
path = "examples/redis/insert_awoo.rs"

[[example]]
name = "redis_dump"
path = "examples/redis/dump.rs"

[[example]]
name = "redis_get_github_repos"
path = "examples/redis/get_github_repos.rs"

### Github

[[example]]
name = "github_gist"
path = "examples/github/gist.rs"

[[example]]
name = "github_redis_user_repos_hash"
path = "examples/github/redis_user_repos_hash.rs"

[[example]]
name = "github_get_repos"
path = "examples/github/get_repos.rs"

[[example]]
name = "github_single_repo_stats"
path = "examples/github/single_repo_stats.rs"
