[workspace]
resolver = "2"

members = [
  "check",
  "check-for-cringe-summaries",
  "compress-exe",
  "convert-caption-json-to-txt",
  "convert-e621-json-to-caption",
  "create-empty-caption-files",
  "extract-metadata",
  "fix-multiline-tags",
  "format-json",
  "insert-pedantic",
  "keep-tokens",
  "list-lora-blocks",
  "remove-escape-characters",
  "remove-extra-file-extensions",
  #"remove-lora-blocks",
  "remove-mac-artifacts",
  "remove-transparency",
  "remove-url-files",
  "rename-to-md5",
  "rplc",
  "sample-browser",
  "search-for-superscript-numbers",
]

[package]
name = "dataset-tools"
version = "0.1.0"
authors = ["Balazs Horvath"]
edition = "2021"
license = "MIT"

# Enable all compiler optimizations in debug builds.
[profile.dev]
opt-level = 3

# Enable all compiler optimizations for dependencies in debug builds.
# With some link time optimizations, it might produce better optimized
# code, using whole-program analysis, at the cost of longer linking time.
[profile.dev.package."*"]
opt-level = 3
codegen-units = 1

# Enable every possible compiler optimizations and stripping for release builds.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
#criterion = { git = "https://github.com/bheisler/criterion.rs", features = ["html_reports"] }

[dependencies]
# Command Line Argument Parser for Rust
md5 = "0.7.0"
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.21", features = ["derive"] }
regex = "1.11.1"
walkdir = "2.5.0"
crossterm = "0.28.1"
serde_json = "1.0.133"
safetensors = "0.4.5"
memmap2 = "0.9.5"
anyhow = { version = "1.0.93", features = ["backtrace"] }
image = "0.25.5"
tokio = { version = "1.41.1", features = ["full"] }
url = "2.5.4"
getopts = "0.2.21"
# 🎲
rand = { version = "0.8.5", features = ["log", "small_rng"] }
