[package]
name = "check"
version = "0.1.0"
authors = ["Balazs Horvath"]
edition = "2021"

[dependencies]
dataset-tools = { path = ".." }
regex = "1.10.6"
crossterm = "0.28.1"
tokio = { version = "1.40.0", features = ["full"] }
clap = { version = "4.5.17", features = ["derive"] }
anyhow = { version = "1.0.88", features = ["backtrace"] }
toml = "0.8.19"
