[package]
name = "convert-e621-json-to-caption"
version = "0.1.0"
authors = ["Balazs Horvath"]
edition = "2021"

[dependencies]
dataset-tools = { path = ".." }
regex = "1.11.0"
walkdir = "2.5.0"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
anyhow = { version = "1.0.89", features = ["backtrace"] }
