[package]
name = "convert-e621-json-to-caption"
version = "0.1.0"
authors = ["Balazs Horvath"]
edition = "2021"

[dependencies]
dataset-tools = { path = ".." }
regex = "1.11.1"
walkdir = "2.5.0"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
anyhow = { version = "1.0.93", features = ["backtrace"] }
