[package]
name = "extract-metadata"
version = "0.1.0"
edition = "2021"

[dependencies]
dataset-tools = { path = ".." }
safetensors = "0.4.5"
memmap2 = "0.9.5"
serde_json = "1.0.128"
walkdir = "2.5.0"
anyhow = { version = "1.0.89", features = ["backtrace"] }
tokio = { version = "1.40.0", features = ["full"] }
env_logger = "0.11.5"
glob = "0.3.1"
