[package]
name = "format-json"
version = "0.1.0"
authors = ["Balazs Horvath"]
edition = "2021"

[dependencies]
dataset-tools = { path = ".." }
serde_json = "1.0.128"
walkdir = "2.5.0"
tokio = { version = "1.40.0", features = ["full"] }
anyhow = { version = "1.0.89", features = ["backtrace"] }
