[package]
name = "keep-tokens"
version = "0.1.0"
authors = ["Balazs Horvath"]
edition = "2021"

[dependencies]
dataset-tools = { path = ".." }
walkdir = "2.5.0"
tokio = { version = "1.41.1", features = ["full"] }
anyhow = { version = "1.0.93", features = ["backtrace"] }

[dev-dependencies]
tempfile = "3.10.1"
