[package]
name = "letterbox-remover"
version = "0.1.0"
edition = "2021"

[dependencies]
dataset-tools = { path = ".." }
image = { version = "0.25.5", features = ["png"] }
walkdir = "2.5.0"
tokio = { version = "1.41.1", features = ["full", "macros"] }
jxl-oxide = { version = "0.10.2", features = ["image"] }
