[package]
name = "qwen"
version = "0.1.0"
edition = "2021"

[dependencies]
dataset-tools = { path = ".." }
fancy-regex = "0.13.0"
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.9", features = ["derive"] }
# 🎲
rand = { version = "0.8.5" }
# Candle
candle-core = { version = "0.6.0", features = ["mkl"] }
candle-examples = { version = "0.6.0", features = ["mkl"] }
candle-transformers = { version = "0.6.0", features = ["mkl"] }
candle-nn = { version = "0.6.0", features = ["mkl"] }
# Candle Third-Party
candle-einops = { git = "https://github.com/tomsanbear/candle-einops" }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
hf-hub = { version = "0.3.2", features = ["tokio"] }
tokenizers = { version = "0.19.1", features = ["onig"] }
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
serde_json = "1.0.120"
