[package]
name = "remove-lora-blocks"
version = "0.1.0"
edition = "2021"

[dependencies]
dataset-tools = { path = ".." }
walkdir = "2.5.0"
tokio = { version = "1.41.1", features = ["full"] }
anyhow = { version = "1.0.93", features = ["backtrace"] }
safetensors = "0.4.5"
memmap2 = "0.9.5"
