[package]
name = "search-for-superscript-numbers"
version = "0.1.0"
edition = "2021"

[dependencies]
dataset-tools = { path = ".." }
walkdir = "2.5.0"
regex = "1.10.6"
tokio = { version = "1.40.0", features = ["full"] }
crossterm = "0.28.1"
anyhow = { version = "1.0.86", features = ["backtrace"] }
