[package]
name = "dataset-tools-rs"
version = "0.1.0"
authors = ["Balazs Horvath"]
edition = "2021"

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
rand = { version = "0.8.5", features = ["small_rng"] }
aho-corasick = "1.1.3"
crossterm = "0.27.0"
#winit = { version = "0.30.3", features = ["rwh_05"] }
#wgpu = "0.20.1"
bytemuck = { git = "https://github.com/ka-de/bytemuck", default-features = false, features = [
  "derive",
] }
nanorand = "0.7.0"
kmeans_colors = "0.6.0"
image = "0.25.1"
palette = "0.7.6"
serde_json = "1.0.117"
walkdir = "2.5.0"
regex = "1.10.5"
tabled = "0.15.0"
nalgebra = "0.32.6"
approx = "0.5.1"
plotters = "0.3.6"
colorous = "1.0.14"
